[package]
name = "lights-out"
version = "0.1.1"
authors = ["Tastaturtaste <joshua.moellers@gmx.net>"]
edition = "2021"
build = "build.rs"
license = "Apache-2.0" # Has to be compatible with slint's GPLv3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.0"

[build-dependencies]
slint-build = "1.0"
