[package]
name = "lights-out"
version = "0.1.2"
authors = ["Tastaturtaste <joshua.moellers@gmx.net>"]
edition = "2021"
build = "build.rs"
license = "Apache-2.0" # Has to be compatible with slint's GPLv3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", default-features = false, features = ["small_rng", "getrandom"] }
slint = "1.0"

[build-dependencies]
slint-build = "1.0"
